@@ -440,7 +440,7 @@
           Cards are special bonus unlocked every ten enemy level, cards are
           unlocked by prestige and never reset. Cards are not effected by
           "experience multiplier" and can be changed only one time per prestige
-          run.
+          run. Some cards require more slots.
         </p>
       </ng-template>
     </nz-tab>
