@@ -1,3 +1,8 @@
+26/09/2020
+-   Challenges
+-   More cards
+-   Mega Computing Center bonus decreased from 30% to 20%
+
 12/09/2020
 -   Megastructure
 -   Warps keyboard shortcuts (options section)
